// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should select unassigned from contacts 1`] = `
Array [
  Object {
    "id": "1",
    "organizational_permissions": Array [
      Object {
        "followup_status": "contact_attempted",
        "organization_id": "123",
      },
    ],
    "reverse_contact_assignments": Array [],
  },
  Object {
    "id": "2",
    "organizational_permissions": Array [
      Object {
        "followup_status": "uncontacted",
        "organization_id": "123",
      },
    ],
    "reverse_contact_assignments": Array [],
  },
]
`;

exports[`should select uncontacted from contacts 1`] = `
Array [
  Object {
    "id": "2",
    "organizational_permissions": Array [
      Object {
        "followup_status": "uncontacted",
        "organization_id": "123",
      },
    ],
    "reverse_contact_assignments": Array [],
  },
  Object {
    "id": "4",
    "organizational_permissions": Array [
      Object {
        "followup_status": "uncontacted",
        "organization_id": "123",
      },
    ],
    "reverse_contact_assignments": Array [
      Object {
        "id": "23",
      },
    ],
  },
]
`;
